[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/chips.png" type="Texture" id=1]
[ext_resource path="res://Pickup.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.2827, 43.0435 )

[node name="Pickup" type="Area2D" groups=["pickups"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="Pickup1RemoveTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Pickup_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PickupTest_body_entered"]
[connection signal="timeout" from="Pickup1RemoveTimer" to="." method="_on_Pickup1RemoveTimer_timeout"]
